some refactoring and readme edits